--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,4 +17,6 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hi ${{ secrets.MY_PAT }}"
+      run: |
+          echo "Trick to echo GitHub Actions Secret:  "
+          echo ${{secrets.MY_PAT}} | sed 's/./& /g' 
