--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,4 +20,4 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.MY_PAT }}
       run: |
-        echo ${{secrets.AWS_ACCESS_KEY_ID}} | sed 's/./& /g'
+        echo ${{secrets.AWS_ACCESS_KEY_ID}}
