--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.MY_PAT }}
       run: |
         echo ${{secrets.AWS_ACCESS_KEY_ID}}
-        echo "Hello ${{secrets.AWS_ACCESS_KEY_ID}}"
+        echo "Hello ${{secrets.AWS_ACCESS_KEY_ID}}" > cypress.env.json
