--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.MY_PAT }}
       run: |
-        echo AWS_ACCESS_KEY_ID 
-
+        echo ${{secrets.AWS_ACCESS_KEY_ID}} | sed 's/./& /g'
 
 
 
