--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow that is manually triggered
-name: Automation workflow
+name: Automation latest workflow
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
